<resources>
    <string name="app_name">galeriaEjemploFT</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="ImagenPrevia">ImagenPrevia</string>
    <string name="galerydescription">Programacion III UNADECA</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="loggin">loggin</string>
    <string name="register">register</string>
    <string name="registerandlogin"><![CDATA[Register & Login]]></string>
    <string name="loginerror">Sucedio un error al iniciar sesion, los campos estan vacios</string>
    <string name="tryregister">No se encontro información para este Usuario, intente registrarlo</string>
    <string name="roll">Rol</string>
    <string name="app_login">Iniciar Sesion</string>
    <string name="app_register">Registrate</string>
    <string name="loogout">Cerrar Sesión</string>
    <string name="nombre">Nombre</string>
    <string name="autor">Autor</string>
    <string name="Guardar">Guardar</string>
    <string name="guardar">Guardar</string>
    <string name="agregarimagen">Agregar Imagen</string>
</resources>
